--- a/base/1519797593lfvqatj8dy/text.html
+++ b/base/1519797593lfvqatj8dy/text.html
@@ -32,9 +32,12 @@ p, li { white-space: pre-wrap; }
 <p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Прошлой зимой был установлен новый маленький аккумулятор, старый стоял еще родной, но на морозах стал разряжаться.</p>
 <p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;"><br /></p>
 <p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">В подарок летние шины на оригинальных 16&quot; дисках (сейчас хакка липучка на оригинальных 16&quot; дисках).</p>
-<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Пробег 126 тыс. Средний расход летом 5-5,5 литров. Зимой поднимается до 7 - 7.5 на 100 км.</p>
+<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Средний расход летом 5-5,5 литров. Зимой поднимается до 7 - 7.5 на 100 км.</p>
 <p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Диагностическая карта получена в начале февраля.</p>
 <p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">В настощее время в машине ничего делать не надо. Масло в двигателе было заменено около 1000 км. назад.</p>
 <p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Часть информации есть на драйве - https://www.drive2.ru/r/toyota/1614806/</p>
 <p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;"><br /></p>
-<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Причина продажи - в течении 1,5 лет работаю от дома в 2 км. а приус машина для тех кто много ездит. Даже жалко его использовать на такие короткие пробеги.</p></body></html>
+<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Причина продажи - сейчас работаю от дома в 2 км. а приус машина для тех кто много ездит. Даже жалко его использовать на такие короткие расстояния.</p>
+<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Пробег 126 тыс. </p>
+<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Из Московской области машина не выезжала. В основном ездила в Химках.</p>
+<p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;"><br /></p></body></html>
