--- a/base/1519797593lfvqatj8dy/text.html
+++ b/base/1519797593lfvqatj8dy/text.html
@@ -30,6 +30,7 @@ p, li { white-space: pre-wrap; }
 <p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Все заказ-наряды на выполненные работы и купленные запчасти имеются.</p>
 <p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;"><br /></p>
 <p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Прошлой зимой был установлен новый маленький аккумулятор, старый стоял еще родной, но на морозах стал разряжаться.</p>
+<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Прошлым летом заменен подогрев пассажирского сиденья (известная болячка)</p>
 <p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;"><br /></p>
 <p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">В подарок летние шины на оригинальных 16&quot; дисках (сейчас хакка липучка на оригинальных 16&quot; дисках).</p>
 <p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Средний расход летом 5-5,5 литров. Зимой поднимается до 7 - 7.5 на 100 км.</p>
